OS-7998. Shareable->shared on first env notification

--- a/herald/modules/email_generator/templates/first_shareable_resources.html
+++ b/herald/modules/email_generator/templates/first_shareable_resources.html
@@ -153,7 +153,7 @@
                                   <div style="font-family: 'Trebuchet MS', Tahoma, sans-serif">
                                     <div class="txtTinyMce-wrapper" style="font-size: 12px; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; mso-line-height-alt: 18px; color: #333f53; line-height: 1.5">
                                       <p style="margin: 0; font-size: 16px; text-align: center">
-                                        The first {{texts.shareable_resource_count}} shareable environments have been successfully added to
+                                        The first {{texts.shareable_resource_count}} shared environments have been successfully added to
                                         <strong>{{texts.organization.name}}</strong>
                                         ({{texts.organization.id}}) organization.
                                       </p>
