--- a/herald/modules/email_generator/templates/anomaly_detection_alert.html
+++ b/herald/modules/email_generator/templates/anomaly_detection_alert.html
@@ -284,8 +284,8 @@
                     <tr>
                       <td class="pad">
                         <div class="alignment" align="center">
-                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://{{etcd.control_panel_link}}/anomalies/{{texts.organization_constraint.id}}" style="height:42px;width:149px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#f58535"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
-                          <a href="https://{{ etcd.control_panel_link }}/anomalies/{{ texts.organization_constraint.id }}"
+                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://{{etcd.control_panel_link}}/anomalies/{{texts.organization_constraint.id}}?organizationId={{texts.organization.id}}" style="height:42px;width:149px;v-text-anchor:middle;" arcsize="10%" stroke="false" fillcolor="#f58535"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:16px"><![endif]-->
+                          <a href="https://{{ etcd.control_panel_link }}/anomalies/{{ texts.organization_constraint.id }}?organizationId={{texts.organization.id}}"
                              target="_blank" rel="noopener"
                              style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#f58535;border-radius:4px;width:auto;border-top:0px solid #F58535;font-weight:400;border-right:0px solid #F58535;border-bottom:0px solid #F58535;border-left:0px solid #F58535;padding-top:5px;padding-bottom:5px;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span
                               style="padding-left:20px;padding-right:20px;font-size:16px;display:inline-block;letter-spacing:normal;"><span
